--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <meta property="og:image" content="images/Screenshot_cut.jpg"/>
+    <meta property="og:image" content="https://github.com/NeoScripter/website-portfolio/tree/main/rock-paper-scissors-game/screenshot.jpg"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
