--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <meta property="og:image" content="https://neoscripter.github.io/website-portfolio/rock-paper-scissors-game/screenshot.jpg"/>
+    <meta property="og:title" content="Rock Paper Scissors" />
+    <meta property="og:description" content="Rock Paper Scissors game" />
+    <meta property="og:url" content="https://neoscripter.github.io/website-portfolio/rock-paper-scissors-game/">
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
-    <title>Frontend Mentor | Rock, Paper, Scissors</title>
+    <title>Rock, Paper, Scissors</title>
     <style>
       .attribution { font-size: 11px; text-align: center; }
       .attribution a { color: hsl(228, 45%, 44%); }
