Added a glowing effect, fixed the height of the exit button in the rules section, and added a session storage for the score

--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <meta property="og:image" content="https://neoscripter.github.io/website-portfolio/rock-paper-scissors-game/screenshot_desktop.jpg"/>
+    <meta property="og:image" content="https://neoscripter.github.io/website-portfolio/rock-paper-scissors-game/meta-images/screenshot_desktop.jpg"/>
     <meta property="og:title" content="Rock Paper Scissors" />
     <meta property="og:description" content="Rock Paper Scissors game" />
     <meta property="og:url" content="https://neoscripter.github.io/website-portfolio/rock-paper-scissors-game/">
@@ -12,10 +12,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <title>Rock, Paper, Scissors</title>
-    <style>
-      .attribution { font-size: 11px; text-align: center; }
-      .attribution a { color: hsl(228, 45%, 44%); }
-    </style>
   </head>
   <body>
     <div class="wrapper">
@@ -40,12 +36,12 @@
       <div id="outcome">
         <div class="left">
           <p class="title up">YOU PICKED</p>
-          <div id="player-choice" class="second-moves"></div>
+          <div id="player-choice" class="choice"></div>
           <p class="title bottom">YOU PICKED</p>
           </div>
           <div class="right">
             <p class="title up">THE HOUSE PICKED</p>
-            <div id="computer-choice" class="second-moves"></div>
+            <div id="computer-choice" class="choice"></div>
             <p class="title bottom">THE HOUSE PICKED</p>
           </div>
         <div class="restart">
@@ -63,22 +59,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
-<!-- 
-Score
-Rules
-
-You Picked
-The House Picked
-
-You Win
-You Lose
-
-Play Again
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/NeoScripter">Ilya Andreev</a>.
-    </div>
- -->
