--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -40,12 +40,12 @@
       <div id="outcome">
         <div class="left">
           <p class="title up">YOU PICKED</p>
-          <div id="player-choice" class="second-moves"></div>
+          <div id="player-choice" class="choice"></div>
           <p class="title bottom">YOU PICKED</p>
           </div>
           <div class="right">
             <p class="title up">THE HOUSE PICKED</p>
-            <div id="computer-choice" class="second-moves"></div>
+            <div id="computer-choice" class="choice"></div>
             <p class="title bottom">THE HOUSE PICKED</p>
           </div>
         <div class="restart">
