Finished the testimonials section and the design of two bottom grid sections

--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -52,32 +52,39 @@
             <a href="#">Learn more</a>
           </div>
           <div class="cherries">
-            <h3>Graphic design</h3>
-            <p>
-              Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-            </p>
+            <div class="section">
+              <h3>Graphic Design</h3>
+              <p>
+                Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+              </p>
+            </div>
           </div>
           <div class="orange">
-            <h3>Photography</h3>
-            <p>
-              Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-            </p>
+            <div class="section">
+              <h3>Photography</h3>
+              <p>
+                Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+              </p>
+            </div>
           </div>
       </div>
       <div class="testimonials">
         <h4>Client testimonials</h4>
         <div class="test_flex">
           <div class="col left">
+            <img src="images/image-emily.jpg" alt="Emily">
             <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
             <p class="name">Emily R.</p>
             <p class="position">Marketing Director</p>
           </div>
           <div class="col middle">
+            <img src="images/image-thomas.jpg" alt="Thomas">
             <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
             <p class="name">Thomas S.</p>
             <p class="position">Chief Operating Officer</p>
           </div>
           <div class="col right">
+            <img src="images/image-jennie.jpg" alt="Jennie">
             <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
             <p class="name">Jennie F.</p>
             <p class="position">Business Owner</p>
