--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -23,6 +23,7 @@
             <li>Projects</li>
             <li class="contact_button">Contact</li>
           </ul>
+          <img src="images/icon-hamburger.svg" alt="three horizontal lines" class="selector">
         </nav>
       </header>
       <h1>We are creatives</h1>
@@ -112,10 +113,10 @@
             </ul>
           </nav>
           <div class="share_links">
-            <img src="images/icon-facebook.svg" alt="Facebook">
-            <img src="images/icon-instagram.svg" alt="Instagram">
-            <img src="images/icon-twitter.svg" alt="Twitter">
-            <img src="images/icon-pinterest.svg" alt="Pininterest">
+            <img src="images/icon-facebook.svg" alt="Facebook" class="black">
+            <img src="images/icon-instagram.svg" alt="Instagram" class="black">
+            <img src="images/icon-twitter.svg" alt="Twitter" class="black">
+            <img src="images/icon-pinterest.svg" alt="Pininterest" class="black">
           </div>
         </div>
       </footer>
