--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="main">
     <div class="preview">
-      <header class="header">
+      <header class="header prehidden">
         <img src="images/logo.svg" alt="sunnyside" class="logo">
         <nav class="top_nav">
           <ul>
@@ -29,11 +29,11 @@
       <h1>We are creatives</h1>
     </div>
       <div class="grid">
-        <div class="egg">
+        <div class="egg prehidden">
             <img src="images/desktop/image-transform.jpg" alt="Chicken egg on yellow background" class="image desktop">
             <img src="images/mobile/image-transform.jpg" alt="Chicken egg on yellow background" class="image mobile">
         </div>
-          <div class="transform">
+          <div class="transform prehidden">
             <h2>Transform your brand</h2>
             <p>
               We are a full-service creative agency specializing in helping brands grow fast. 
@@ -41,26 +41,26 @@
             </p>
             <a href="#">Learn more</a>
           </div>
-          <div class="glass">
+          <div class="glass prehidden">
             <img src="images/desktop/image-stand-out.jpg" alt="Pink glass on pink background" class="image desktop">
             <img src="images/mobile/image-stand-out.jpg" alt="Pink glass on pink background" class="image mobile">
           </div>
-          <div class="stand_out">
+          <div class="stand_out prehidden">
             <h2>Stand out to the right audience</h2>
             <p>
               Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
             </p>
             <a href="#">Learn more</a>
           </div>
-          <div class="cherries">
-            <div class="section">
+          <div class="cherries prehidden">
+            <div class="section prehidden">
               <h3>Graphic Design</h3>
               <p>
                 Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
               </p>
             </div>
           </div>
-          <div class="orange">
+          <div class="orange prehidden">
             <div class="section">
               <h3>Photography</h3>
               <p>
@@ -71,20 +71,20 @@
       </div>
       <div class="testimonials">
         <h4>Client testimonials</h4>
-        <div class="test_flex">
+        <div class="test_flex prehidden">
           <div class="col left">
             <img src="images/image-emily.jpg" alt="Emily">
             <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
             <p class="name">Emily R.</p>
             <p class="position">Marketing Director</p>
           </div>
-          <div class="col middle">
+          <div class="col middle prehidden">
             <img src="images/image-thomas.jpg" alt="Thomas">
             <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
             <p class="name">Thomas S.</p>
             <p class="position">Chief Operating Officer</p>
           </div>
-          <div class="col right">
+          <div class="col right prehidden">
             <img src="images/image-jennie.jpg" alt="Jennie">
             <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
             <p class="name">Jennie F.</p>
@@ -93,16 +93,16 @@
         </div>
       </div>
       <div class="bottom_images">
-        <img src="images/desktop/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image desktop">
-          <img src="images/mobile/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image mobile">
-          <img src="images/desktop/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image desktop">
-          <img src="images/mobile/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image mobile">
-          <img src="images/desktop/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image desktop">
-          <img src="images/mobile/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image mobile">
-          <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image desktop">
-          <img src="images/mobile/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image mobile">
+        <img src="images/desktop/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image desktop prehidden">
+          <img src="images/mobile/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image mobile prehidden">
+          <img src="images/desktop/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image desktop prehidden">
+          <img src="images/mobile/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image mobile prehidden">
+          <img src="images/desktop/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image desktop prehidden">
+          <img src="images/mobile/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image mobile prehidden">
+          <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image desktop prehidden">
+          <img src="images/mobile/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image mobile prehidden">
       </div>
-      <footer>
+      <footer class="prehidden">
         <div class="footer_wrapper">
           <img src="images/logo.black.svg" alt="sunnyside" class="svg">
           <nav class="bottom_nav">
@@ -114,9 +114,13 @@
           </nav>
           <div class="share_links">
             <img src="images/icon-facebook.svg" alt="Facebook" class="black">
+            <img src="images/icon-facebook.white.svg" alt="Facebook" class="white">
             <img src="images/icon-instagram.svg" alt="Instagram" class="black">
+            <img src="images/icon-instagram.white.svg" alt="Instagram" class="white">
             <img src="images/icon-twitter.svg" alt="Twitter" class="black">
+            <img src="images/icon-twitter.white.svg" alt="Twitter" class="white">
             <img src="images/icon-pinterest.svg" alt="Pininterest" class="black">
+            <img src="images/icon-pinterest.white.svg" alt="Pininterest" class="white">
           </div>
         </div>
       </footer>
