Finished the project

--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -17,7 +17,7 @@
       <header class="header prehidden">
         <img src="images/logo.svg" alt="sunnyside" class="logo">
         <nav class="top_nav">
-          <ul>
+          <ul class="main_ul">
             <li>About</li>
             <li>Services</li>
             <li>Projects</li>
@@ -26,7 +26,18 @@
           <img src="images/icon-hamburger.svg" alt="three horizontal lines" class="selector">
         </nav>
       </header>
-      <h1>We are creatives</h1>
+      <div class="heading-holder">
+        <h1>We are creatives</h1>
+        <img src="images/icon-arrow-down.svg" alt="white arrow pointed downward" class="arrow">
+        <div class="collapsed-nav">
+          <ul class="secondary_ul">
+            <li>About</li>
+            <li>Services</li>
+            <li>Projects</li>
+            <li class="contact_button">Contact</li>
+          </ul>
+        </div>
+      </div>
     </div>
       <div class="grid">
         <div class="egg prehidden">
@@ -106,7 +117,7 @@
         <div class="footer_wrapper">
           <img src="images/logo.black.svg" alt="sunnyside" class="svg">
           <nav class="bottom_nav">
-            <ul>
+            <ul class="main_ul">
               <li>About</li>
               <li>Services</li>
               <li>Projects</li>
