--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -13,38 +13,38 @@
 </head>
 <body>
   <main class="main">
-    <div class="preview">
-      <header class="header prehidden">
+    <div class="header_bg">
+      <header class="header sliding">
         <img src="images/logo.svg" alt="sunnyside" class="logo">
-        <nav class="top_nav">
-          <ul class="main_ul">
+        <nav class="header_nav">
+          <ul class="header_ul">
             <li>About</li>
             <li>Services</li>
             <li>Projects</li>
-            <li class="contact_button">Contact</li>
+            <li class="contact_btn">Contact</li>
           </ul>
-          <img src="images/icon-hamburger.svg" alt="three horizontal lines" class="selector">
+          <img src="images/icon-hamburger.svg" alt="three horizontal lines" class="mobile_logo">
         </nav>
       </header>
-      <div class="heading-holder">
+      <div class="header_wrapper">
         <h1>We are creatives</h1>
         <img src="images/icon-arrow-down.svg" alt="white arrow pointed downward" class="arrow">
-        <div class="collapsed-nav">
-          <ul class="secondary_ul">
+        <div class="mobile_nav">
+          <ul class="mobile_ul">
             <li>About</li>
             <li>Services</li>
             <li>Projects</li>
-            <li class="contact_button">Contact</li>
+            <li class="contact_btn">Contact</li>
           </ul>
         </div>
       </div>
     </div>
       <div class="grid">
-        <div class="egg prehidden">
+        <div class="egg sliding">
             <img src="images/desktop/image-transform.jpg" alt="Chicken egg on yellow background" class="image desktop">
             <img src="images/mobile/image-transform.jpg" alt="Chicken egg on yellow background" class="image mobile">
         </div>
-          <div class="transform prehidden">
+          <div class="transform sliding">
             <h2>Transform your brand</h2>
             <p>
               We are a full-service creative agency specializing in helping brands grow fast. 
@@ -52,26 +52,26 @@
             </p>
             <a href="#">Learn more</a>
           </div>
-          <div class="glass prehidden">
+          <div class="glass sliding">
             <img src="images/desktop/image-stand-out.jpg" alt="Pink glass on pink background" class="image desktop">
             <img src="images/mobile/image-stand-out.jpg" alt="Pink glass on pink background" class="image mobile">
           </div>
-          <div class="stand_out prehidden">
+          <div class="stand_out sliding">
             <h2>Stand out to the right audience</h2>
             <p>
               Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
             </p>
             <a href="#">Learn more</a>
           </div>
-          <div class="cherries prehidden">
-            <div class="section prehidden">
+          <div class="cherries sliding">
+            <div class="section sliding">
               <h3>Graphic Design</h3>
               <p>
                 Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
               </p>
             </div>
           </div>
-          <div class="orange prehidden">
+          <div class="orange sliding">
             <div class="section">
               <h3>Photography</h3>
               <p>
@@ -80,22 +80,22 @@
             </div>
           </div>
       </div>
-      <div class="testimonials">
+      <div class="reviews">
         <h4>Client testimonials</h4>
-        <div class="test_flex prehidden">
-          <div class="col left">
+        <div class="reviews_wrapper">
+          <div class="col left sliding">
             <img src="images/image-emily.jpg" alt="Emily">
             <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
             <p class="name">Emily R.</p>
             <p class="position">Marketing Director</p>
           </div>
-          <div class="col middle prehidden">
+          <div class="col middle sliding">
             <img src="images/image-thomas.jpg" alt="Thomas">
             <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
             <p class="name">Thomas S.</p>
             <p class="position">Chief Operating Officer</p>
           </div>
-          <div class="col right prehidden">
+          <div class="col right sliding">
             <img src="images/image-jennie.jpg" alt="Jennie">
             <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
             <p class="name">Jennie F.</p>
@@ -104,20 +104,20 @@
         </div>
       </div>
       <div class="bottom_images">
-        <img src="images/desktop/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image desktop prehidden">
-          <img src="images/mobile/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image mobile prehidden">
-          <img src="images/desktop/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image desktop prehidden">
-          <img src="images/mobile/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image mobile prehidden">
-          <img src="images/desktop/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image desktop prehidden">
-          <img src="images/mobile/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image mobile prehidden">
-          <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image desktop prehidden">
-          <img src="images/mobile/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image mobile prehidden">
+        <img src="images/desktop/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image desktop sliding">
+          <img src="images/mobile/image-gallery-milkbottles.jpg" alt="White bottles with red caps on blue background" class="image mobile sliding">
+          <img src="images/desktop/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image desktop sliding">
+          <img src="images/mobile/image-gallery-orange.jpg" alt="white place with blue borders on orange background with a slice of orange on it" class="image mobile sliding">
+          <img src="images/desktop/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image desktop sliding">
+          <img src="images/mobile/image-gallery-cone.jpg" alt="An ice-cream cone on blue background" class="image mobile sliding">
+          <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image desktop sliding">
+          <img src="images/mobile/image-gallery-sugarcubes.jpg" alt="white sugarcubes on pink background" class="image mobile sliding">
       </div>
-      <footer class="prehidden">
+      <footer class="sliding">
         <div class="footer_wrapper">
           <img src="images/logo.black.svg" alt="sunnyside" class="svg">
           <nav class="bottom_nav">
-            <ul class="main_ul">
+            <ul class="header_ul">
               <li>About</li>
               <li>Services</li>
               <li>Projects</li>
@@ -138,15 +138,3 @@
     </main>
 </body>
 </html>
-
-
-<!-- <div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Your Name Here</a>.
-</div> 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-
--->
