--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <title>Sunnyside agency landing page</title>
 
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
