--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -12,17 +12,22 @@
             <div class="screen_wrapper">
                 <h1>Etch-a-Sketch</h1>
                 <div class="screen">
-                    <div class="subsreen" id="screen"></div>
+                    <div class="subsreen" id="screen">
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                        <div class="square"></div>
+                    </div>
                 </div>
             </div>
             <div class="panel">
                 <select id="optionSelect">
-                    <option value="option1">Black</option>
-                    <option value="option2">Grey</option>
-                    <option value="option3">Random</option>
+                    <option value="black">Black</option>
+                    <option value="grey">Grey</option>
+                    <option value="random">Random</option>
                 </select>
                 <div class="size">
-                    <input type="text" id="input" placeholder="(2-100)">
+                    <input type="text" id="input" placeholder="(2-120)">
                     <button id="set" for="input">Set</button>
                 </div>
                 <button id="clear">Clear</button>
