--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -26,33 +26,33 @@
         </div>
       </div>
       <div class="screen">
-        <input type="text" id="inputField">
+        <p id="inputField">399,981</p>
       </div>
     </div>
     <div class="panel">
-      <button class="zero">0</button>
-      <button class="one">1</button>
-      <button class="two">2</button>
-      <button class="three">3</button>
-      <button class="four">4</button>
-      <button class="five">5</button>
-      <button class="six">6</button>
       <button class="seven">7</button>
       <button class="eight">8</button>
       <button class="nine">9</button>
-      <button class="slash">/</button>
+      <button class="delete">DEL</button>
+      <button class="four">4</button>
+      <button class="five">5</button>
+      <button class="six">6</button>
+      <button class="plus">+</button>
+      <button class="one">1</button>
+      <button class="two">2</button>
+      <button class="three">3</button>
+      <button class="minus">-</button>
       <button class="period">.</button>
+      <button class="zero">0</button>
+      <button class="slash">/</button>
+      <button class="multiply">x</button>
       <button class="reset">RESET</button>
       <button class="equal">=</button>
-      <button class="delete">DEL</button>
-      <button class="plus">+</button>
-      <button class="minus">-</button>
-      <button class="multiply">x</button>
     </div>
   </main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/NeoScripter">Ilya Andreev</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+    <p>Coded by <a href="https://github.com/NeoScripter">Ilya Andreev</a>.</p>
   </div>
 </body>
 </html>
