Finished the design

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -19,8 +19,11 @@
             <div class="modes">1 2 3</div>
             <div class="toggle_switch">
               <input type="radio" id="modeStandard" name="theme" value="standard" checked>
+              <label for="modeStandard"></label>
               <input type="radio" id="modeLight" name="theme" value="light">
+              <label for="modeLight"></label>
               <input type="radio" id="modeDark" name="theme" value="dark">
+              <label for="modeDark"></label>
             </div>
           </div>
         </div>
