Finished the working logic of the app

--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -29,26 +29,26 @@
         </div>
       </div>
       <div class="screen">
-        <p id="inputField">399,981</p>
+        <p id="inputField"></p>
       </div>
     </div>
     <div class="panel">
-      <button class="seven">7</button>
-      <button class="eight">8</button>
-      <button class="nine">9</button>
+      <button class="seven digit" value="7">7</button>
+      <button class="eight digit" value="8">8</button>
+      <button class="nine digit" value="9">9</button>
       <button class="delete">DEL</button>
-      <button class="four">4</button>
-      <button class="five">5</button>
-      <button class="six">6</button>
-      <button class="plus">+</button>
-      <button class="one">1</button>
-      <button class="two">2</button>
-      <button class="three">3</button>
-      <button class="minus">-</button>
-      <button class="period">.</button>
-      <button class="zero">0</button>
-      <button class="slash">/</button>
-      <button class="multiply">x</button>
+      <button class="four digit" value="4">4</button>
+      <button class="five digit" value="5">5</button>
+      <button class="six digit" value="6">6</button>
+      <button class="plus operation" value="+">+</button>
+      <button class="one digit" value="1">1</button>
+      <button class="two  digit" value="2">2</button>
+      <button class="three digit" value="3">3</button>
+      <button class="minus operation" value="-">-</button>
+      <button class="period" value=".">.</button>
+      <button class="zero digit" value="0">0</button>
+      <button class="slash operation" value="/">/</button>
+      <button class="multiply operation" value="*">x</button>
       <button class="reset">RESET</button>
       <button class="equal">=</button>
     </div>
