Fixed the wrong website previews

--- a/nft-card/index.html
+++ b/nft-card/index.html
@@ -4,25 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Blog preview card</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Frontend Mentor | NFT preview card component</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; color: white; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-  <div>
-    <img src="assets/images/illustration-article.svg" alt="">
-      <h1>Learning</h1>
-      <p>Published 21 Dec 2023</p>
+  <div class="wrapper">
+    <div class="link-wrapper">
+      <a href="#" class="image-link">
+        <img src="images/image-equilibrium.jpg" alt="">
+        <div class="overlay"><img src="images/icon-view.svg" class="view"></div>
+      </a>
+    </div>
+    <a href="#" class="header">Equilibrium #3429</a>
 
-      <a href="#">HTML & CSS foundations</a>
+    <p>Our Equilibrium collection promotes balance and calm.</p>
 
-      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
-      <div class="footer">
-        <img class="avatar" src="assets/images/image-avatar.webp">
-        Greg Hooper
-      </div>
+    <div class="price">
+      <div class="price-left">0.041 ETH</div>
+      <div class="price-right">3 days left</div>
+    </div>
+    
+    <div class="signature-container">
+      <img src="images/image-avatar.png" class="avatar">
+      <div class="signature">Creation of <a href="#">Jules Wyvern</a></div>
+    </div>
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/NeoScripter">Ilya Andreev</a>.
   </div>
 </body>
 </html>
