--- a/social-proof-page/index.html
+++ b/social-proof-page/index.html
@@ -1,67 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div>
-    <img src="assets/images/image-omelette.jpeg" alt="slightly brown omelette on a white plate filled with green herbs and tomatoes on the inside and some brown sauce on the side of the plate">
-    <h1>Simple Omelette Recipe</h1>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css">
+    <title>Frontend Mentor | Social proof section</title>
 
-    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <h1>10,000+ of our users love our products.</h1>
 
-    <div class="inner-container">
-      <h2>Preparation time</h2>
-      <ul>
-        <li><span>Total:</span> Approximately 10 minutes</li>
-        <li><span>Preparation:</span> 5 minutes</li>
-        <li><span>Cooking:</span> 5 minutes</li>
-      </ul>
+        <p>We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
+      </div>
+      
+      <div class="rating">
+        <div class="review first">
+          <div class="stars"></div>
+          <div class="rates">Rated 5 Stars in Reviews</div>
+        </div>
+        <div class="review second">
+          <div class="stars"></div>
+          <div class="rates">Rated 5 Stars in Report Guru</div>
+        </div>
+        <div class="review third">
+          <div class="stars"></div>
+          <div class="rates">Rated 5 Stars in BestTech</div>
+        </div>
+      </div>
+      
+      <div class="footer">
+        <div class="card one">
+          <div class="icon">
+            <img src="images/image-colton.jpg" alt="Picture of a man's face">
+            <div>
+              <p>Colton Smith</p>
+              <p><span>Verified Buyer</span></p>
+            </div>
+          </div>
+          <div>
+            "We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"
+          </div>
+        </div>
+        <div class="card two">
+          <div class="icon">
+            <img src="images/image-irene.jpg" alt="A picture of a woman's face">
+            <div>
+              <p>Irene Roberts</p>
+              <p><span>Verified Buyer</span></p>
+            </div>
+          </div>
+          <div>
+            "Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."
+          </div>
+        </div>
+        <div class="card three">
+          <div class="icon">
+            <img src="images/image-anne.jpg" alt="A picture of a woman's face">
+            <div>
+              <p>Anne Wallace</p>
+              <p><span>Verified Buyer</span></p>
+            </div>
+          </div>
+          <div>
+            "Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mid-section">
-        <h3>Ingredients</h3>
-  
-    <ul>
-      <li>2-3 large eggs</li>
-      <li>Salt, to taste</li>
-      <li>Pepper, to taste</li>
-      <li>1 tablespoon of butter or oil</li>
-      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-    </ul>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/NeoScripter">Ilya Andreev</a>.
     </div>
-    <div class="mid-section">
-      <h3>Instructions</h3>
-  
-      <ol>
-        <li><span>Beat the eggs:</span> <span class="instruction">In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-          You can add a tablespoon of water or milk for a fluffier texture.</span></li>
-        <li><span>Heat the pan:</span> <span class="instruction">Place a non-stick frying pan over medium heat and add butter or oil.</span></li>
-        <li><span>Cook the omelette:</span> <span class="instruction">Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</span></li>
-        <li><span>Add fillings (optional):</span> <span class="instruction">When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</span></li>
-        <li><span>Fold and serve:</span> <span class="instruction">As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</span></li>
-        <li><span>Enjoy:</span> <span class="instruction">Serve hot, with additional salt and pepper if needed.</span></li>
-        </ol>
-    </div>
-    <h3>Nutrition</h3>
-  
-    <p>The table below shows nutritional values per serving without the additional fillings.</p>
-    <div class="grid-container">
-      <div>Calories</div>
-      <div class="even">277kcal</div>   
-      <div>Carbs</div>
-      <div class="even">0g</div>
-      <div>Protein</div>
-      <div class="even">20g</div>
-      <div>Fat</div>
-      <div class="even">22g</div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
