Adapted for small screens and added the flipping effect

--- a/launch-countdown-timer/index.html
+++ b/launch-countdown-timer/index.html
@@ -16,27 +16,32 @@
     <h1>We're launching soon</h1>
     <div class="countdown_wrapper">
       <div class="section">
-        <div class="display_bg">
-          <div class="display">14</div>
+        <div class="left"></div>
+        <div class="line"></div>
+        <div class="right"></div>
+        <div class="display">14
         </div>
         <p class="units">Days</p>
       </div>
       <div class="section">
-        <div class="display_bg">
-          <div class="display">14</div>
-        </div>
+        <div class="left"></div>
+        <div class="line"></div>
+        <div class="right"></div>
+        <div class="display">14</div>
         <p class="units">Hours</p>
       </div>
       <div class="section">
-        <div class="display_bg">
-          <div class="display">14</div>
-        </div>
+        <div class="left"></div>
+        <div class="line"></div>
+        <div class="right"></div>
+        <div class="display">14</div>
         <p class="units">Minutes</p>
       </div>
       <div class="section">
-        <div class="display_bg">
-          <div class="display">14</div>
-        </div>
+        <div class="left"></div>
+        <div class="line"></div>
+        <div class="right"></div>
+        <div class="display">14</div>
         <p class="units">Seconds</p>
       </div>
     </div>
