Finished the project

--- a/launch-countdown-timer/index.html
+++ b/launch-countdown-timer/index.html
@@ -19,7 +19,7 @@
         <div class="left"></div>
         <div class="line"></div>
         <div class="right"></div>
-        <div class="display">14
+        <div class="display days" id="days">14
         </div>
         <p class="units">Days</p>
       </div>
@@ -27,21 +27,21 @@
         <div class="left"></div>
         <div class="line"></div>
         <div class="right"></div>
-        <div class="display">14</div>
+        <div class="display hours" id="hours">00</div>
         <p class="units">Hours</p>
       </div>
       <div class="section">
         <div class="left"></div>
         <div class="line"></div>
         <div class="right"></div>
-        <div class="display">14</div>
+        <div class="display minutes" id="minutes">00</div>
         <p class="units">Minutes</p>
       </div>
       <div class="section">
         <div class="left"></div>
         <div class="line"></div>
         <div class="right"></div>
-        <div class="display">14</div>
+        <div class="display seconds" id="seconds">00</div>
         <p class="units">Seconds</p>
       </div>
     </div>
